Minor touch-ups and bug fixes, z-index utility class

--- a/src/less/notification.less
+++ b/src/less/notification.less
@@ -6,7 +6,6 @@
     .lineHeight-looser;
     .fontSize-large;
     height: 45px;
-    z-index: 1;
     text-align: center;
     left: 0;
     right: 0;
