--- a/src/less/utility.less
+++ b/src/less/utility.less
@@ -79,6 +79,10 @@
     white-space: nowrap;
 }
 
+.u-aboveContent {
+    z-index: 1;
+}
+
 //  TODO: I don't know if these should be prefixed by u- or is-
 .hidden {
     //  Use important to ensure that hidden always takes precedence.
